--- a/example/package.json
+++ b/example/package.json
@@ -21,7 +21,7 @@
     "@capacitor/ios": "^6.0.0",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
-    "capacitor-plugin-amap": "workspace:*",
+    "capacitor-ionic-plugin-amap": "workspace:*",
     "ionicons": "^7.0.0",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
