--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "capacitor-ionic-plugin-amap",
-  "version": "7.0.2",
+  "version": "7.0.3",
   "description": "Amap Capacitor",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
@@ -14,7 +14,7 @@
     "ios/Sources",
     "ios/Tests",
     "Package.swift",
-    "CapacitorPluginAmap.podspec"
+    "CapacitorIonicPluginAmap.podspec"
   ],
   "author": "Tom",
   "license": "MIT",
@@ -32,7 +32,7 @@
   ],
   "scripts": {
     "verify": "npm run verify:ios && npm run verify:android && npm run verify:web",
-    "verify:ios": "xcodebuild -scheme CapacitorPluginAmap -destination generic/platform=iOS",
+    "verify:ios": "xcodebuild -scheme CapacitorIonicPluginAmap -destination generic/platform=iOS",
     "verify:android": "cd android && ./gradlew clean build test && cd ..",
     "verify:web": "npm run build",
     "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
